# mlx-audiocraft

./: .gitignore  BLOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
benchmarks/: run_benchmarks.py
demo/: index.html
examples/: audiogen_demo.py  musicgen_demo.py
mlx_audiocraft/: __init__.py  cli.py
mlx_audiocraft/models/: __init__.py  audiogen.py  builders.py  encodec.py  genmodel.py  lm.py  loaders.py  musicgen.py
mlx_audiocraft/modules/: __init__.py  activations.py  codebooks_patterns.py  conditioners.py  conv.py  lstm.py  rope.py  seanet.py  streaming.py  transformer.py
mlx_audiocraft/quantization/: core_vq.py  vq.py
mlx_audiocraft/utils/: __init__.py  audio_utils.py  padding.py  sampling.py  weight_convert.py
